Fixed bug with developer phrase not wrapping correclty and centered

--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ video {
   display: block;
   max-width: 100%;
 }
+/* TYPOGRAPHY */
+p,
+li {
+  text-wrap: pretty;
+  max-width: 65ch;
+}
 
 /* CUSTOMS PROPERTIES */
 :root {
@@ -80,6 +86,7 @@ body {
 
 main {
   background-color: var(--clr-grey-800);
+  max-width: 85%;
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
@@ -117,6 +124,7 @@ main {
 .developer .phrase {
   font-size: 0.825rem;
   font-weight: 600;
+  text-align: center;
 }
 
 /* LINKS SECTION */
